--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Untitled Document</title>
 <!-- Bootstrap -->
-<link href="../css/bootstrap-4.4.1.css" rel="stylesheet">
+<link href="css/bootstrap-4.4.1.css" rel="stylesheet">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
 <style type="text/css">
 .nav-link {
